# draconisplusplus-monorepo

./: .gitignore  AGENTS.md  ATTRIBUTIONS.md  CONTRIBUTING.md  Cargo.toml  README.md  config.example.hpp  flake.nix  justfile  meson.build  meson.options  vcpkg.json  windows-clang.ini
.github/workflows/: build.yml
bindings/c3/: draconis.c3  draconis_raw.c3  meson.build
bindings/c3/examples/: demo.c3
bindings/csharp/: meson.build
bindings/csharp/Draconis/: Draconis.csproj  DraconisClient.cs  NativeMethods.cs
bindings/csharp/examples/BasicInfo/: BasicInfo.csproj  Program.cs
bindings/kotlin/: build.gradle.kts  drac_paths.ini.in  meson.build  settings.gradle.kts
bindings/kotlin/src/main/cpp/: draconis_jni.cpp
bindings/kotlin/src/main/kotlin/draconis/: CacheManager.kt  Models.kt
bindings/kotlin/src/main/kotlin/draconis/examples/: Main.kt
bindings/lua/: meson.build
bindings/lua/examples/: demo.lua
bindings/lua/src/: bindings.cpp
bindings/python/: meson.build  pyproject.toml
bindings/python/examples/: demo.py
bindings/python/src/: bindings.cpp
bindings/rust/: .clangd  Cargo.toml  build.rs  meson.build  rustfmt.toml
bindings/rust/src/: lib.rs  sys.rs  types.rs
c-api/: meson.build
c-api/examples/: demo.c
c-api/include/: draconis_c.h
c-api/src/: draconis_c.cpp
core/: .env  .envrc  .gitignore  AGENTS.md  Doxyfile  flake.nix  justfile  meson.build  meson.options  vcpkg.json  windows-clang.ini
core/.github/workflows/: build.yml
core/examples/: meson.build
core/examples/glaze_http/: main.cpp
core/examples/glaze_http/web/: index.mustache  style.css
core/examples/mcp_server/: main.cpp
core/include/Drac++/Config/: PrecompiledLayout.hpp
core/include/Drac++/Core/: Plugin.hpp  PluginConfig.hpp  PluginManager.hpp  StaticPlugins.hpp  System.hpp
core/include/Drac++/Services/: Packages.hpp
core/include/Drac++/Utils/: ArgumentParser.hpp  CacheManager.hpp  DataTypes.hpp  Env.hpp  Error.hpp  Localization.hpp  Logging.hpp  TranslationData.hpp  Types.hpp
core/nix/: boost-ut.nix  default.nix  module.nix  musl.nix  package.nix
core/src/CLI/: CLI.cpp  CLI.hpp  main.cpp  meson.build
core/src/CLI/Config/: Config.cpp  Config.hpp
core/src/CLI/Core/: SystemInfo.cpp  SystemInfo.hpp
core/src/CLI/UI/: AsciiArt.hpp  UI.cpp  UI.hpp
core/src/Lib/: Localization.cpp  meson.build
core/src/Lib/Core/: PluginManager.cpp  StaticPlugins.cpp
core/src/Lib/OS/: BSD.cpp  Haiku.cpp  Linux.cpp  Serenity.cpp  Unix.hpp  Windows.cpp  macOS.cpp
core/src/Lib/OS/macOS/: Bridge.hpp  Bridge.mm
core/src/Lib/Services/: Packages.cpp
core/src/Lib/Wrappers/: Wayland.hpp  XCB.hpp
core/tests/: meson.build  test_argparser.cpp  test_env.cpp  test_error.cpp  test_localization.cpp  test_performance_helpers.cpp  test_types.cpp
docs/: plugins.md
nix/: default.nix  module.nix  musl.nix  package.nix  with-plugins.nix
plugins/: README.md  meson.build
plugins/json_format/: meson.build
plugins/markdown_format/: meson.build
plugins/now_playing/: meson.build  now_playing.cpp
plugins/weather/: meson.build  weather.cpp
plugins/yaml_format/: meson.build
subprojects/: boost.ut.wrap  glaze.wrap  lua.wrap  magic_enum.wrap  sol2.wrap
tools/: clang_format.py  plugin_helper.py
