# ===================================================================== #
#                    Draconis++ Global Configuration                    #
#                                                                       #
#       Additional configuration can be found in `config.toml` or       #
#  `include/Config.hpp`, depending on the `precompiled_config` option.  #
# ===================================================================== #

# ===================== #
#  Build Configuration  #
# ===================== #

option(
  'build_examples',
  type: 'boolean',
  value: true,
  description: 'Build example applications',
)

option(
  'build_tests',
  type: 'boolean',
  value: true,
  description: 'Build unit tests',
)

option(
  'build_cli',
  type: 'boolean',
  value: true,
  description: 'Build the CLI application',
)

# ===================== #
#     Core Features     #
# ===================== #

option(
  'packagecount',
  type: 'feature',
  value: 'enabled',
  description: 'Enable package count functionality',
)

option(
  'caching',
  type: 'feature',
  value: 'enabled',
  description: 'Enable caching functionality',
)

option(
  'plugins',
  type: 'feature',
  value: 'enabled',
  description: 'Enable plugin support',
)

option(
  'precompiled_config',
  type: 'boolean',
  value: false,
  description: 'Use precompiled configuration (disables runtime TOML parsing)',
)

option(
  'default_language',
  type: 'string',
  value: 'en',
  description: 'Default language for localization (en, es, fr, de)',
)

# ===================== #
#     Plugin System     #
# ===================== #

option(
  'static_plugins',
  type: 'array',
  value: [],
  description: 'List of plugins to compile statically into the binary',
)

# ===================== #
#   Platform Specific   #
# ===================== #

# Linux-specific
option(
  'pugixml',
  type: 'feature',
  value: 'auto',
  description: 'Use pugixml for XBPS package metadata on Void Linux',
)

# Linux/BSD-specific
option(
  'xcb',
  type: 'feature',
  value: 'enabled',
  description: 'Use libxcb for X11 window manager/display support',
)

option(
  'wayland',
  type: 'feature',
  value: 'enabled',
  description: 'Use wayland-client for Wayland compositor/display support',
)

# ===================== #
#    Development/Nix    #
# ===================== #

option(
  'build_for_musl',
  type: 'boolean',
  value: false,
  description: 'Build for musl libc (primarily for Nix)',
)

option(
  'use_linked_pci_ids',
  type: 'boolean',
  value: false,
  description: 'Use linked PCI IDs database (primarily for Nix)',
)
